# test-template-ci

./: .rtd-environment.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/test_package/: index.rst
test_package/: __init__.py
test_package/example_subpkg/: setup_package.py
