[metadata]
name = test_package
author = Astropy Developers
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = package template test
long_description = file: README.rst
edit_on_github = False
github_project = astrofrog/test-template-ci

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = astropy


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
all =
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
test_package = data/*

[tool:pytest]
testpaths = "test_package" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    test_package/_astropy_init*
    test_package/conftest.py
    test_package/*setup_package*
    test_package/tests/*
    test_package/*/tests/*
    test_package/extern/*
    test_package/version*
    */test_package/_astropy_init*
    */test_package/conftest.py
    */test_package/*setup_package*
    */test_package/tests/*
    */test_package/*/tests/*
    */test_package/extern/*
    */test_package/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
